--- a/index.html
+++ b/index.html
@@ -4,71 +4,73 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ポケモン図鑑番号検定</title>
-
 <style>
-body {
-  font-family: system-ui, sans-serif;
-  margin: 0;
-  padding: 10px;
-  background: #f5f5f5;
-}
-.container {
-  max-width: 500px;
-  margin: auto;
-  background: white;
-  padding: 15px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-h1 { text-align: center; font-size: 1.4em; }
-select, input, button { width: 100%; font-size: 1.1em; padding: 10px; margin: 8px 0; }
-#status { text-align: center; font-size: 1.1em; margin: 10px 0; }
-#timer { font-weight: bold; color: red; }
-.hidden { display: none; }
-#ranking { font-size: 0.95em; margin: 5px 0; text-align: left; }
+body { font-family: system-ui, sans-serif; margin:0; padding:10px; background:#f5f5f5; }
+.container { max-width:500px; margin:auto; background:white; padding:15px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1);}
+h1 { text-align:center; font-size:1.4em; }
+select, input, button { width:100%; font-size:1.1em; padding:10px; margin:8px 0;}
+#status { text-align:center; font-size:1.1em; margin:10px 0;}
+#timer { font-weight:bold; color:red; }
+.hidden { display:none;}
+#ranking { font-size:0.95em; margin:5px 0; text-align:left; }
+#generations { text-align:left; margin:10px 0;}
+#generations label { display:block; }
 </style>
 </head>
 
 <body>
 <div class="container">
-  <h1>ポケモン図鑑番号検定</h1>
+<h1>ポケモン図鑑番号検定</h1>
 
-  <label>モード</label>
-  <select id="modeSelect">
-    <option value="num2poke">番号 → ポケモン</option>
-    <option value="poke2num">ポケモン → 番号</option>
-  </select>
+<label>モード</label>
+<select id="modeSelect">
+  <option value="num2poke">番号 → ポケモン</option>
+  <option value="poke2num">ポケモン → 番号</option>
+</select>
 
-  <label>制限時間</label>
-  <select id="timeSelect">
-    <option value="0">制限時間なし</option>
-    <option value="5">5秒</option>
-    <option value="10">10秒</option>
-    <option value="20">20秒</option>
-    <option value="30">30秒</option>
-    <option value="45">45秒</option>
-    <option value="60">60秒</option>
-  </select>
+<label>制限時間</label>
+<select id="timeSelect">
+  <option value="0">制限時間なし</option>
+  <option value="5">5秒</option>
+  <option value="10">10秒</option>
+  <option value="20">20秒</option>
+  <option value="30">30秒</option>
+  <option value="45">45秒</option>
+  <option value="60">60秒</option>
+</select>
 
+<div id="generations">
+  <label><input type="checkbox" class="gen" value="1-151" checked> カントー</label>
+  <label><input type="checkbox" class="gen" value="152-251" checked> ジョウト</label>
+  <label><input type="checkbox" class="gen" value="252-386" checked> ホウエン</label>
+  <label><input type="checkbox" class="gen" value="387-493" checked> シンオウ</label>
+  <label><input type="checkbox" class="gen" value="494-649" checked> イッシュ</label>
+  <label><input type="checkbox" class="gen" value="650-721" checked> カロス</label>
+  <label><input type="checkbox" class="gen" value="722-809" checked> アローラ+メルタン</label>
+  <label><input type="checkbox" class="gen" value="810-906" checked> ガラル+ヒスイ</label>
+  <label><input type="checkbox" class="gen" value="907-1025" checked> パルデア</label>
+  <label><input type="checkbox" id="selectAll" checked> 全て選択</label>
+</div>
+
+<div id="status">
+  この時間の最高記録（1位～3位）：<div id="ranking">---</div>
+</div>
+
+<button onclick="startGame()">ゲーム開始</button>
+
+<div id="game" class="hidden">
   <div id="status">
-    この時間の最高記録（1位～3位）：<div id="ranking">---</div>
+    <span id="prompt"></span><br>
+    ⏱ <span id="timer"></span><br>
+    正解数：<span id="score">0</span>
   </div>
 
-  <button onclick="startGame()">ゲーム開始</button>
+  <input id="answer" list="pokemonList" placeholder="答えを入力" autocomplete="off">
+  <datalist id="pokemonList"></datalist>
 
-  <div id="game" class="hidden">
-    <div id="status">
-      <span id="prompt"></span><br>
-      ⏱ <span id="timer"></span><br>
-      正解数：<span id="score">0</span>
-    </div>
-
-    <input id="answer" list="pokemonList" placeholder="答えを入力" autocomplete="off">
-    <datalist id="pokemonList"></datalist>
-
-    <button onclick="checkAnswer()">判定</button>
-    <button onclick="giveUp()">ギブアップ</button>
-  </div>
+  <button onclick="checkAnswer()">判定</button>
+  <button onclick="giveUp()">ギブアップ</button>
+</div>
 </div>
 
 <script>
@@ -79,55 +81,63 @@ let timer = null;
 let timeLeft = 0;
 let limit = 10;
 let score = 0;
-let mode = "num2poke"; // デフォルト: 番号→ポケモン
+let mode = "num2poke";
 
+// HTML要素
 const answer = document.getElementById("answer");
 const pokemonList = document.getElementById("pokemonList");
 const timeSelect = document.getElementById("timeSelect");
 const modeSelect = document.getElementById("modeSelect");
 const rankingDiv = document.getElementById("ranking");
 const promptSpan = document.getElementById("prompt");
+const genCheckboxes = document.querySelectorAll(".gen");
+const selectAll = document.getElementById("selectAll");
 
-// ----- 日本語正規化（ひらがな・濁音・拗音対応） -----
-function normalizeJP(str) {
-  return str
-    .normalize("NFKC")
-    .replace(/[\u3041-\u3096]/g, ch => String.fromCharCode(ch.charCodeAt(0) + 0x60))
-    .replace(/ゔ/g,"ヴ");
+// ----- 正規化 -----
+function normalizeJP(str){
+  return str.normalize("NFKC")
+            .replace(/[\u3041-\u3096]/g, ch => String.fromCharCode(ch.charCodeAt(0)+0x60))
+            .replace(/ゔ/g,"ヴ");
 }
 
-// ----- 最高記録キー（モード+時間） -----
-function bestKey() { return `pokemon_best_${mode}_${limit}`; }
+// ----- 最高記録キー -----
+function bestKey(){ return `pokemon_best_${mode}_${limit}`; }
 
 // ----- JSON読み込み -----
 fetch("pokemon.json")
-  .then(r => r.json())
-  .then(data => {
-    pokemon = data;
-    numbers = Object.keys(pokemon);
-    updateBest();
-  })
-  .catch(() => alert("pokemon.json の読み込みに失敗しました"));
+  .then(r=>r.json())
+  .then(data=>{ pokemon=data; numbers=Object.keys(pokemon); updateBest(); })
+  .catch(()=>alert("pokemon.json の読み込みに失敗しました"));
 
-// ----- 最高記録表示（トップ3） -----
-function updateBest() {
-  const key = bestKey();
-  const top = JSON.parse(localStorage.getItem(key) || "[]");
-  if(top.length===0){
-    rankingDiv.innerHTML = "---";
-  } else {
-    rankingDiv.innerHTML = top.map((v,i)=>`${i+1}位: ${v}`).join("<br>");
+// ----- 最高記録表示 -----
+function updateBest(){
+  const allChecked = Array.from(genCheckboxes).every(ch=>ch.checked);
+  if(!allChecked){
+    rankingDiv.innerHTML="---";
+    return;
   }
+  const key = bestKey();
+  let top = JSON.parse(localStorage.getItem(key)||"[]");
+  if(top.length===0){ rankingDiv.innerHTML="---"; }
+  else { rankingDiv.innerHTML = top.map((v,i)=>`${i+1}位: ${v}`).join("<br>"); }
 }
 
-// ----- モード・時間変更時 -----
-modeSelect.addEventListener("change", ()=>{
-  mode = modeSelect.value;
+// ----- モード・時間変更 -----
+modeSelect.addEventListener("change",()=>{ mode=modeSelect.value; updateBest(); });
+timeSelect.addEventListener("change",()=>{ limit=Number(timeSelect.value); updateBest(); });
+
+// ----- 世代チェックボックス制御 -----
+selectAll.addEventListener("change",()=>{
+  genCheckboxes.forEach(ch=>ch.checked=selectAll.checked);
   updateBest();
 });
-timeSelect.addEventListener("change", ()=>{
-  limit = Number(timeSelect.value);
-  updateBest();
+
+genCheckboxes.forEach(ch=>{
+  ch.addEventListener("change",()=>{
+    const all = Array.from(genCheckboxes).every(c=>c.checked);
+    selectAll.checked=all;
+    updateBest();
+  });
 });
 
 // ----- ゲーム開始 -----
@@ -139,42 +149,51 @@ function startGame(){
   nextQuestion();
 }
 
+// ----- 出題範囲取得 -----
+function getRangeNumbers(){
+  const selected = Array.from(genCheckboxes).filter(ch=>ch.checked);
+  let ranges = [];
+  selected.forEach(ch=>{
+    const [s,e]=ch.value.split("-").map(Number);
+    for(let i=s;i<=e;i++) ranges.push(String(i));
+  });
+  return ranges;
+}
+
 // ----- 次の問題 -----
 function nextQuestion(){
   clearInterval(timer);
 
-  if(limit===0){
-    document.getElementById("timer").textContent="∞";
-  } else {
+  const rangeNumbers = getRangeNumbers();
+  if(rangeNumbers.length===0){
+    alert("世代を選択してください");
+    return;
+  }
+
+  if(limit===0){ document.getElementById("timer").textContent="∞"; }
+  else {
     timeLeft=limit;
     document.getElementById("timer").textContent=timeLeft;
-
     timer=setInterval(()=>{
       timeLeft--;
       document.getElementById("timer").textContent=timeLeft;
-      if(timeLeft<=0){
-        gameOver(`時間切れ！\n正解は「${getCorrectAnswer()}」`);
-      }
+      if(timeLeft<=0){ gameOver(`時間切れ！\n正解は「${getCorrectAnswer()}」`); }
     },1000);
   }
 
-  currentNumber = numbers[Math.floor(Math.random()*numbers.length)];
-  if(mode==="num2poke"){
-    promptSpan.textContent = `番号: ${currentNumber}`;
-  } else {
-    promptSpan.textContent = `ポケモン: ${pokemon[currentNumber]}`;
-  }
+  currentNumber = rangeNumbers[Math.floor(Math.random()*rangeNumbers.length)];
+  promptSpan.textContent = mode==="num2poke"?`番号: ${currentNumber}`:`ポケモン: ${pokemon[currentNumber]}`;
 
   answer.value="";
   answer.focus();
 }
 
-// ----- 入力予測変換 -----
-answer.addEventListener("input", ()=>{
-  const text = normalizeJP(answer.value);
+// ----- 予測変換 -----
+answer.addEventListener("input",()=>{
+  const text=normalizeJP(answer.value);
   pokemonList.innerHTML="";
-
-  numbers.forEach(n=>{
+  const rangeNumbers = getRangeNumbers();
+  rangeNumbers.forEach(n=>{
     const candidate = mode==="num2poke"?pokemon[n]:n;
     if(normalizeJP(candidate).startsWith(text)){
       const o=document.createElement("option");
@@ -185,42 +204,33 @@ answer.addEventListener("input", ()=>{
 });
 
 // ----- Enter判定 -----
-answer.addEventListener("keydown", e=>{if(e.key==="Enter") checkAnswer();});
+answer.addEventListener("keydown",e=>{if(e.key==="Enter") checkAnswer();});
 
 // ----- 判定 -----
-function getCorrectAnswer(){
-  return mode==="num2poke"?pokemon[currentNumber]:currentNumber;
-}
-
+function getCorrectAnswer(){ return mode==="num2poke"?pokemon[currentNumber]:currentNumber; }
 function checkAnswer(){
   const inputText = normalizeJP(answer.value.trim());
   const correct = normalizeJP(getCorrectAnswer());
-
-  if(inputText===correct){
-    score++;
-    document.getElementById("score").textContent=score;
-    nextQuestion();
-  } else {
-    gameOver(`不正解！\n正解は「${getCorrectAnswer()}」`);
-  }
+  if(inputText===correct){ score++; document.getElementById("score").textContent=score; nextQuestion(); }
+  else{ gameOver(`不正解！\n正解は「${getCorrectAnswer()}」`); }
 }
 
 // ----- ギブアップ -----
-function giveUp(){
-  gameOver(`ギブアップ！\n正解は「${getCorrectAnswer()}」`);
-}
+function giveUp(){ gameOver(`ギブアップ！\n正解は「${getCorrectAnswer()}」`); }
 
 // ----- ゲームオーバー -----
 function gameOver(reason){
   clearInterval(timer);
 
-  // トップ3更新
-  const key=bestKey();
-  let top = JSON.parse(localStorage.getItem(key)||"[]");
-  top.push(score);
-  top.sort((a,b)=>b-a);
-  top = top.slice(0,3);
-  localStorage.setItem(key,JSON.stringify(top));
+  const allChecked = Array.from(genCheckboxes).every(ch=>ch.checked);
+  if(allChecked){
+    const key = bestKey();
+    let top = JSON.parse(localStorage.getItem(key)||"[]");
+    top.push(score);
+    top.sort((a,b)=>b-a);
+    top=top.slice(0,3);
+    localStorage.setItem(key,JSON.stringify(top));
+  }
 
   alert(`${reason}\nスコア：${score}`);
   updateBest();
