--- a/index.html
+++ b/index.html
@@ -5,65 +5,58 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ポケモン図鑑番号検定</title>
 <style>
-body { font-family: system-ui, sans-serif; margin:0; padding:10px; background:#f5f5f5; }
-.container { max-width:500px; margin:auto; background:white; padding:15px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1);}
-h1 { text-align:center; font-size:1.4em; }
-select, input, button { width:100%; font-size:1.1em; padding:10px; margin:8px 0;}
+body { font-family: system-ui, sans-serif; margin:0; padding:10px; background:#f5f5f5;}
+.container { max-width:600px; margin:auto; background:white; padding:15px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1);}
+h1 { text-align:center; font-size:1.4em;}
+select, input, button { width:100%; font-size:1.1em; padding:10px; margin:5px 0;}
 #status { text-align:center; font-size:1.1em; margin:10px 0;}
-#timer { font-weight:bold; color:red; }
+#timer { font-weight:bold; color:red;}
 .hidden { display:none;}
-#ranking { font-size:0.95em; margin:5px 0; text-align:left; }
+.gen-container { display:grid; grid-template-columns: 1fr 1fr; gap:5px; margin:5px 0;}
+button { cursor:pointer; }
 </style>
 </head>
-
 <body>
 <div class="container">
 <h1>ポケモン図鑑番号検定</h1>
-
-<label>モード</label>
-<select id="modeSelect">
-  <option value="num2poke">番号 → ポケモン</option>
-  <option value="poke2num">ポケモン → 番号</option>
-</select>
 
 <label>制限時間</label>
 <select id="timeSelect">
   <option value="0">制限時間なし</option>
   <option value="5">5秒</option>
-  <option value="10">10秒</option>
+  <option value="10" selected>10秒</option>
   <option value="20">20秒</option>
   <option value="30">30秒</option>
   <option value="45">45秒</option>
   <option value="60">60秒</option>
 </select>
 
-<label>世代選択（複数選択可）</label>
-<select id="generationSelect" multiple size="6">
-  <option value="1-151" selected>カントー</option>
-  <option value="152-251" selected>ジョウト</option>
-  <option value="252-386" selected>ホウエン</option>
-  <option value="387-493" selected>シンオウ</option>
-  <option value="494-649" selected>イッシュ</option>
-  <option value="650-721" selected>カロス</option>
-  <option value="722-809" selected>アローラ+メルタン</option>
-  <option value="810-906" selected>ガラル+ヒスイ</option>
-  <option value="907-1025" selected>パルデア</option>
-</select>
-
-<div id="status">
-  この時間の最高記録（1位～3位）：<div id="ranking">---</div>
+<label>出題世代</label>
+<div class="gen-container">
+  <label><input type="checkbox" class="generation" value="all" checked> 全て</label>
+  <label><input type="checkbox" class="generation" value="1"> カントー</label>
+  <label><input type="checkbox" class="generation" value="2"> ジョウト</label>
+  <label><input type="checkbox" class="generation" value="3"> ホウエン</label>
+  <label><input type="checkbox" class="generation" value="4"> シンオウ</label>
+  <label><input type="checkbox" class="generation" value="5"> イッシュ</label>
+  <label><input type="checkbox" class="generation" value="6"> カロス</label>
+  <label><input type="checkbox" class="generation" value="7"> アローラ+メルタン</label>
+  <label><input type="checkbox" class="generation" value="8"> ガラル+ヒスイ</label>
+  <label><input type="checkbox" class="generation" value="9"> パルデア</label>
 </div>
+
+<div id="rankingDiv">この時間の最高記録（1～3位）：<br>---</div>
 
 <button onclick="startGame()">ゲーム開始</button>
 
 <div id="game" class="hidden">
   <div id="status">
-    <span id="prompt"></span><br>
+    No.<span id="number"></span><br>
     ⏱ <span id="timer"></span><br>
     正解数：<span id="score">0</span>
   </div>
 
-  <input id="answer" list="pokemonList" placeholder="答えを入力" autocomplete="off">
+  <input id="answer" list="pokemonList" placeholder="ポケモン名または番号を入力" autocomplete="off">
   <datalist id="pokemonList"></datalist>
 
   <button onclick="checkAnswer()">判定</button>
@@ -79,140 +72,161 @@ let timer = null;
 let timeLeft = 0;
 let limit = 10;
 let score = 0;
-let mode = "num2poke";
 
-// HTML要素
+// HTML要素参照
 const answer = document.getElementById("answer");
 const pokemonList = document.getElementById("pokemonList");
 const timeSelect = document.getElementById("timeSelect");
-const modeSelect = document.getElementById("modeSelect");
-const rankingDiv = document.getElementById("ranking");
-const promptSpan = document.getElementById("prompt");
-const generationSelect = document.getElementById("generationSelect");
+const rankingDiv = document.getElementById("rankingDiv");
+const genCheckboxes = Array.from(document.querySelectorAll(".generation"));
 
-// ----- 正規化 -----
+// ----- 日本語正規化（ひらがな・濁音・半濁音・拗音対応） -----
 function normalizeJP(str){
   return str.normalize("NFKC")
-            .replace(/[\u3041-\u3096]/g, ch => String.fromCharCode(ch.charCodeAt(0)+0x60))
-            .replace(/ゔ/g,"ヴ");
+    .replace(/[\u3041-\u3096]/g,ch=>String.fromCharCode(ch.charCodeAt(0)+0x60))
+    .replace(/ゔ/g,"ヴ");
+}
+
+// ----- 世代範囲 -----
+const genRanges = {
+  "1":[1,151],"2":[152,251],"3":[252,386],"4":[387,493],
+  "5":[494,649],"6":[650,721],"7":[722,809],"8":[810,906],"9":[907,1025]
+};
+
+function getSelectedNumbers(){
+  let selected = genCheckboxes.filter(cb=>cb.checked && cb.value!=="all").map(cb=>cb.value);
+  if(genCheckboxes[0].checked || selected.length===0){ // 全選択
+    return Object.keys(pokemon);
+  }
+  let arr = [];
+  selected.forEach(g=>{
+    let [s,e] = genRanges[g];
+    for(let i=s;i<=e;i++) arr.push(String(i));
+  });
+  return arr;
 }
 
 // ----- 最高記録キー -----
-function bestKey(){ return `pokemon_best_${mode}_${limit}`; }
+function bestKey(){
+  return `pokemon_best_${limit}`;
+}
 
 // ----- JSON読み込み -----
 fetch("pokemon.json")
-  .then(r=>r.json())
-  .then(data=>{ pokemon=data; numbers=Object.keys(pokemon); updateBest(); })
-  .catch(()=>alert("pokemon.json の読み込みに失敗しました"));
+.then(r=>r.json())
+.then(data=>{
+  pokemon = data;
+  numbers = Object.keys(pokemon);
+  updateBest();
+})
+.catch(()=>alert("pokemon.json の読み込みに失敗しました"));
 
-// ----- 最高記録表示 -----
+// ----- 最高記録更新表示 -----
 function updateBest(){
-  const allSelected = generationSelect.selectedOptions.length === generationSelect.options.length;
-  if(!allSelected){ rankingDiv.innerHTML="---"; return; }
-  const key = bestKey();
-  let top = JSON.parse(localStorage.getItem(key)||"[]");
-  if(top.length===0){ rankingDiv.innerHTML="---"; }
-  else { rankingDiv.innerHTML = top.map((v,i)=>`${i+1}位: ${v}`).join("<br>"); }
+  const allSelected = genCheckboxes[0].checked || genCheckboxes.slice(1).every(cb=>cb.checked);
+  if(!allSelected){
+    rankingDiv.style.display = "none";
+    return;
+  }
+  rankingDiv.style.display = "block";
+  const top = JSON.parse(localStorage.getItem(bestKey())||"[]");
+  rankingDiv.innerHTML = top.length ? top.map((v,i)=>`${i+1}位: ${v}`).join("<br>") : "この時間の最高記録（1～3位）：<br>---";
 }
 
-// ----- モード・時間変更 -----
-modeSelect.addEventListener("change",()=>{ mode=modeSelect.value; updateBest(); });
-timeSelect.addEventListener("change",()=>{ limit=Number(timeSelect.value); updateBest(); });
-generationSelect.addEventListener("change",()=>{ updateBest(); });
+// ----- チェックボックス操作 -----
+genCheckboxes.forEach(cb=>{
+  cb.addEventListener("change",()=>{
+    if(cb.value==="all"){
+      genCheckboxes.forEach(c=>c.checked=cb.checked);
+    }else{
+      const all = genCheckboxes.slice(1).every(c=>c.checked);
+      genCheckboxes[0].checked=all;
+    }
+    updateBest();
+  });
+});
 
 // ----- ゲーム開始 -----
 function startGame(){
-  score=0;
-  limit=Number(timeSelect.value);
-  document.getElementById("score").textContent=score;
+  score = 0;
+  limit = Number(timeSelect.value);
+  document.getElementById("score").textContent = score;
   document.getElementById("game").classList.remove("hidden");
   nextQuestion();
-}
-
-// ----- 出題範囲取得 -----
-function getRangeNumbers(){
-  const selected = Array.from(generationSelect.selectedOptions);
-  let ranges = [];
-  selected.forEach(opt=>{
-    const [s,e]=opt.value.split("-").map(Number);
-    for(let i=s;i<=e;i++) ranges.push(String(i));
-  });
-  return ranges;
 }
 
 // ----- 次の問題 -----
 function nextQuestion(){
   clearInterval(timer);
 
-  const rangeNumbers = getRangeNumbers();
-  if(rangeNumbers.length===0){
-    alert("世代を選択してください");
-    return;
-  }
-
-  if(limit===0){ document.getElementById("timer").textContent="∞"; }
-  else {
+  if(limit===0){
+    document.getElementById("timer").textContent="∞";
+  }else{
     timeLeft=limit;
     document.getElementById("timer").textContent=timeLeft;
     timer=setInterval(()=>{
       timeLeft--;
       document.getElementById("timer").textContent=timeLeft;
-      if(timeLeft<=0){ gameOver(`時間切れ！\n正解は「${getCorrectAnswer()}」`); }
+      if(timeLeft<=0) gameOver(`時間切れ！\n正解は「${pokemon[currentNumber]}」`);
     },1000);
   }
 
-  currentNumber = rangeNumbers[Math.floor(Math.random()*rangeNumbers.length)];
-  promptSpan.textContent = mode==="num2poke"?`番号: ${currentNumber}`:`ポケモン: ${pokemon[currentNumber]}`;
+  const available = getSelectedNumbers();
+  currentNumber = available[Math.floor(Math.random()*available.length)];
+  document.getElementById("number").textContent = currentNumber;
 
   answer.value="";
   answer.focus();
 }
 
+// ----- Enter判定 -----
+answer.addEventListener("keydown",e=>{
+  if(e.key==="Enter") checkAnswer();
+});
+
 // ----- 予測変換 -----
 answer.addEventListener("input",()=>{
-  const text=normalizeJP(answer.value);
+  const text = normalizeJP(answer.value);
   pokemonList.innerHTML="";
-  const rangeNumbers = getRangeNumbers();
-  rangeNumbers.forEach(n=>{
-    const candidate = mode==="num2poke"?pokemon[n]:n;
-    if(normalizeJP(candidate).startsWith(text)){
-      const o=document.createElement("option");
-      o.value=candidate;
+  numbers.forEach(n=>{
+    if(normalizeJP(pokemon[n]).startsWith(text) || n.startsWith(text)){
+      const o = document.createElement("option");
+      o.value = pokemon[n];
       pokemonList.appendChild(o);
     }
   });
 });
 
-// ----- Enter判定 -----
-answer.addEventListener("keydown",e=>{if(e.key==="Enter") checkAnswer();});
-
 // ----- 判定 -----
-function getCorrectAnswer(){ return mode==="num2poke"?pokemon[currentNumber]:currentNumber; }
 function checkAnswer(){
   const inputText = normalizeJP(answer.value.trim());
-  const correct = normalizeJP(getCorrectAnswer());
-  if(inputText===correct){ score++; document.getElementById("score").textContent=score; nextQuestion(); }
-  else{ gameOver(`不正解！\n正解は「${getCorrectAnswer()}」`); }
+  const correct = normalizeJP(pokemon[currentNumber]);
+  if(inputText===correct){
+    score++;
+    document.getElementById("score").textContent=score;
+    nextQuestion();
+  }else{
+    gameOver(`不正解！\n正解は「${pokemon[currentNumber]}」`);
+  }
 }
 
 // ----- ギブアップ -----
-function giveUp(){ gameOver(`ギブアップ！\n正解は「${getCorrectAnswer()}」`); }
+function giveUp(){
+  gameOver(`ギブアップ！\n正解は「${pokemon[currentNumber]}」`);
+}
 
 // ----- ゲームオーバー -----
 function gameOver(reason){
   clearInterval(timer);
-
-  const allSelected = generationSelect.selectedOptions.length === generationSelect.options.length;
+  const allSelected = genCheckboxes[0].checked || genCheckboxes.slice(1).every(cb=>cb.checked);
   if(allSelected){
     const key = bestKey();
     let top = JSON.parse(localStorage.getItem(key)||"[]");
     top.push(score);
     top.sort((a,b)=>b-a);
-    top=top.slice(0,3);
+    top = top.slice(0,3);
     localStorage.setItem(key,JSON.stringify(top));
   }
-
   alert(`${reason}\nスコア：${score}`);
   updateBest();
   document.getElementById("game").classList.add("hidden");
