--- a/index.html
+++ b/index.html
@@ -4,66 +4,125 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ポケモン図鑑番号検定</title>
+
 <style>
-body { font-family: system-ui, sans-serif; margin:0; padding:10px; background:#f5f5f5;}
-.container { max-width:600px; margin:auto; background:white; padding:15px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1);}
-h1 { text-align:center; font-size:1.4em; margin-bottom:10px; }
-select, input, button { width:100%; font-size:1.1em; padding:10px; margin:5px 0;}
-#status { text-align:center; font-size:1.1em; margin:10px 0;}
-#timer { font-weight:bold; color:red;}
-.hidden { display:none;}
-.gen-container { display:grid; grid-template-columns: repeat(2, 1fr); gap:5px; margin:10px 0;}
-.gen-box { border:1px solid #ccc; border-radius:5px; padding:5px; text-align:center; position:relative; height:50px; display:flex; flex-direction:column; justify-content:center; }
-.gen-box input { position:absolute; bottom:5px; right:5px; }
-button { cursor:pointer; }
+body {
+  font-family: system-ui, sans-serif;
+  margin: 0;
+  padding: 10px;
+  background: #f5f5f5;
+}
+
+.container {
+  max-width: 500px;
+  margin: auto;
+  background: white;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+h1 { text-align: center; font-size: 1.4em; margin-bottom: 10px; }
+
+select, input, button {
+  width: 100%;
+  font-size: 1.1em;
+  padding: 10px;
+  margin: 8px 0;
+}
+
+#status { text-align: center; font-size: 1.1em; margin: 10px 0; }
+#timer { font-weight: bold; color: red; }
+
+.hidden { display: none; }
+
+/* モード切替 */
+.mode-selector { text-align: center; margin-bottom: 10px; }
+.mode-selector label { margin: 0 10px; }
+
+/* 世代チェックボックス */
+.gen-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.gen-container label {
+  position: relative;
+  padding-left: 5px;
+  display: block;
+  height: 25px;
+  line-height: 25px;
+}
+
+.gen-container input[type="checkbox"] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: scale(1.2);
+}
 </style>
 </head>
+
 <body>
 <div class="container">
-<h1>ポケモン図鑑番号検定</h1>
+  <h1>ポケモン図鑑番号検定</h1>
 
-<label>制限時間</label>
-<select id="timeSelect">
-  <option value="0">制限時間なし</option>
-  <option value="5">5秒</option>
-  <option value="10" selected>10秒</option>
-  <option value="20">20秒</option>
-  <option value="30">30秒</option>
-  <option value="45">45秒</option>
-  <option value="60">60秒</option>
-</select>
-
-<label>出題世代</label>
-<div class="gen-container">
-  <div class="gen-box"><span>全て</span><input type="checkbox" class="generation" value="all" checked></div>
-  <div class="gen-box"><span>カントー</span><input type="checkbox" class="generation" value="1" checked></div>
-  <div class="gen-box"><span>ジョウト</span><input type="checkbox" class="generation" value="2" checked></div>
-  <div class="gen-box"><span>ホウエン</span><input type="checkbox" class="generation" value="3" checked></div>
-  <div class="gen-box"><span>シンオウ</span><input type="checkbox" class="generation" value="4" checked></div>
-  <div class="gen-box"><span>イッシュ</span><input type="checkbox" class="generation" value="5" checked></div>
-  <div class="gen-box"><span>カロス</span><input type="checkbox" class="generation" value="6" checked></div>
-  <div class="gen-box"><span>アローラ+メルタン</span><input type="checkbox" class="generation" value="7" checked></div>
-  <div class="gen-box"><span>ガラル+ヒスイ</span><input type="checkbox" class="generation" value="8" checked></div>
-  <div class="gen-box"><span>パルデア</span><input type="checkbox" class="generation" value="9" checked></div>
-</div>
-
-<div id="rankingDiv">この時間の最高記録（1～3位）：<br>---</div>
-
-<button onclick="startGame()">ゲーム開始</button>
-
-<div id="game" class="hidden">
-  <div id="status">
-    No.<span id="number"></span><br>
-    ⏱ <span id="timer"></span><br>
-    正解数：<span id="score">0</span>
+  <!-- モード切替 -->
+  <div class="mode-selector">
+    <label><input type="radio" name="mode" value="numToName" checked> 番号→ポケモン</label>
+    <label><input type="radio" name="mode" value="nameToNum"> ポケモン→番号</label>
   </div>
 
-  <input id="answer" list="pokemonList" placeholder="ポケモン名または番号を入力" autocomplete="off">
-  <datalist id="pokemonList"></datalist>
+  <!-- 制限時間 -->
+  <label>制限時間</label>
+  <select id="timeSelect">
+    <option value="0">制限時間なし</option>
+    <option value="5">5秒</option>
+    <option value="10">10秒</option>
+    <option value="20">20秒</option>
+    <option value="30">30秒</option>
+    <option value="45">45秒</option>
+    <option value="60">60秒</option>
+  </select>
 
-  <button onclick="checkAnswer()">判定</button>
-  <button onclick="giveUp()">ギブアップ</button>
-</div>
+  <!-- 世代チェック -->
+  <div class="gen-container">
+    <label><input type="checkbox" value="all" checked> 全て</label>
+    <label><input type="checkbox" value="kanto" checked> カントー</label>
+    <label><input type="checkbox" value="johto" checked> ジョウト</label>
+    <label><input type="checkbox" value="hoenn" checked> ホウエン</label>
+    <label><input type="checkbox" value="sinnoh" checked> シンオウ</label>
+    <label><input type="checkbox" value="unova" checked> イッシュ</label>
+    <label><input type="checkbox" value="kalos" checked> カロス</label>
+    <label><input type="checkbox" value="alola" checked> アローラ+メルタン</label>
+    <label><input type="checkbox" value="galar" checked> ガラル+ヒスイ</label>
+    <label><input type="checkbox" value="paldea" checked> パルデア</label>
+  </div>
+
+  <div id="bestContainer">
+    この時間の最高記録（1位～3位）：<span id="best">0</span>
+  </div>
+
+  <button onclick="startGame()">ゲーム開始</button>
+
+  <div id="game" class="hidden">
+    <div id="status">
+      出題：<span id="number"></span><br>
+      ⏱ <span id="timer"></span><br>
+      正解数：<span id="score">0</span>
+    </div>
+
+    <input id="answer" list="pokemonList" placeholder="答えを入力" autocomplete="off">
+    <datalist id="pokemonList"></datalist>
+
+    <button onclick="checkAnswer()">判定</button>
+    <button onclick="giveUp()">ギブアップ</button>
+  </div>
 </div>
 
 <script>
@@ -78,123 +137,120 @@ let score = 0;
 const answer = document.getElementById("answer");
 const pokemonList = document.getElementById("pokemonList");
 const timeSelect = document.getElementById("timeSelect");
-const rankingDiv = document.getElementById("rankingDiv");
-const genCheckboxes = Array.from(document.querySelectorAll(".generation"));
-const allCheckbox = genCheckboxes.find(cb=>cb.value==="all");
+const bestContainer = document.getElementById("bestContainer");
+const modeRadios = document.getElementsByName("mode");
+const genCheckboxes = document.querySelectorAll(".gen-container input[type='checkbox']");
 
-// 日本語正規化
-function normalizeJP(str){
-  return str.normalize("NFKC")
-    .replace(/[\u3041-\u3096]/g,ch=>String.fromCharCode(ch.charCodeAt(0)+0x60))
-    .replace(/ゔ/g,"ヴ");
+// ----- 日本語正規化（ひらがな・濁音・拗音対応） -----
+function normalizeJP(str) {
+  return str.normalize("NFKC").replace(/[\u3041-\u3096]/g, ch => String.fromCharCode(ch.charCodeAt(0)+0x60));
 }
 
-// 世代範囲
+// ----- 世代範囲 -----
 const genRanges = {
-  "1":[1,151],"2":[152,251],"3":[252,386],"4":[387,493],
-  "5":[494,649],"6":[650,721],"7":[722,809],"8":[810,906],"9":[907,1025]
+  kanto:[1,151], johto:[152,251], hoenn:[252,386], sinnoh:[387,493],
+  unova:[494,649], kalos:[650,721], alola:[722,809], galar:[810,906], paldea:[907,1025]
 };
 
-function getSelectedNumbers(){
-  const selected = genCheckboxes.filter(cb=>cb.checked && cb.value!=="all").map(cb=>cb.value);
-  if(selected.length===0 || selected.includes("all")){
-    return Object.keys(pokemon);
-  }
-  let nums=[];
-  selected.forEach(g=>{
-    const [start,end]=genRanges[g];
-    for(let i=start;i<=end;i++) nums.push(String(i));
+function getSelectedNumbers() {
+  let selected = [];
+  let allChecked = true;
+  genCheckboxes.forEach(cb=>{
+    if(cb.value!=='all' && cb.checked){
+      const [start,end] = genRanges[cb.value]||[1,1025];
+      for(let i=start;i<=end;i++) selected.push(i);
+    }
+    if(cb.value!=='all' && !cb.checked) allChecked=false;
   });
-  return nums;
+  return {nums:selected, allChecked};
 }
 
-// 最高記録キー
-function bestKey(){ return `pokemon_best_${limit}`; }
+// ----- 最高記録キー -----
+function bestKey() {
+  let mode = getMode();
+  return `pokemon_best_${mode}_${limit}`;
+}
 
-// JSON読み込み
+// ----- モード取得 -----
+function getMode() {
+  for(const r of modeRadios) if(r.checked) return r.value;
+}
+
+// ----- JSON読み込み -----
 fetch("pokemon.json")
-.then(r=>r.json())
-.then(data=>{
-  pokemon = data;
-  numbers = Object.keys(pokemon);
-  updateBest();
-})
-.catch(()=>alert("pokemon.json の読み込みに失敗しました"));
+  .then(r=>r.json())
+  .then(data=>{pokemon=data; numbers=Object.keys(pokemon).map(Number); updateBest();})
+  .catch(()=>alert("pokemon.json の読み込みに失敗しました"));
 
-// 最高記録表示更新
-function updateBest(){
-  const selected = genCheckboxes.filter(cb=>cb.checked && cb.value!=="all");
-  if(selected.length===genCheckboxes.length-1){
-    rankingDiv.style.display="block";
-    let top = JSON.parse(localStorage.getItem(bestKey())||"[]");
-    rankingDiv.innerHTML = top.length? top.map((v,i)=>`${i+1}位: ${v}`).join("<br>") : "この時間の最高記録（1～3位）：<br>---";
-  } else {
-    rankingDiv.style.display="none";
-  }
+// ----- 最高記録表示 -----
+function updateBest() {
+  const {allChecked} = getSelectedNumbers();
+  if(!allChecked){bestContainer.style.display="none"; return;}
+  bestContainer.style.display="block";
+  const bests = JSON.parse(localStorage.getItem(bestKey())||"[0,0,0]");
+  bestContainer.querySelector("#best").textContent = bests.join(" / ");
 }
 
-// ----- 全てチェック制御 -----
-allCheckbox.addEventListener("change",()=>{
-  if(allCheckbox.checked){
-    genCheckboxes.forEach(cb=>cb.checked=true);
-  }else{
-    genCheckboxes.filter(cb=>cb.value!=="all").forEach(cb=>cb.checked=false);
-  }
-  updateBest();
-});
-
-// 個別チェック変更時に全てチェック更新
-genCheckboxes.filter(cb=>cb.value!=="all").forEach(cb=>{
+// ----- チェックボックス処理 -----
+genCheckboxes.forEach(cb=>{
   cb.addEventListener("change",()=>{
-    const allSelected = genCheckboxes.filter(c=>c.value!=="all").every(c=>c.checked);
-    allCheckbox.checked = allSelected;
+    if(cb.value==='all'){
+      genCheckboxes.forEach(c=>c.checked=true);
+    }else{
+      // 全選択のチェック制御
+      const allCB = Array.from(genCheckboxes).find(c=>c.value==='all');
+      const {allChecked} = getSelectedNumbers();
+      allCB.checked = allChecked;
+    }
     updateBest();
   });
 });
 
-// ゲーム開始
+// ----- ゲーム開始 -----
 function startGame(){
-  score = 0;
-  limit = Number(timeSelect.value);
-  document.getElementById("score").textContent = score;
+  score=0;
+  limit=Number(timeSelect.value);
+  document.getElementById("score").textContent=score;
   document.getElementById("game").classList.remove("hidden");
   nextQuestion();
 }
 
-// 次の問題
+// ----- 次の問題 -----
 function nextQuestion(){
   clearInterval(timer);
-  if(limit===0){
-    document.getElementById("timer").textContent="∞";
-  } else {
+  const {nums, allChecked} = getSelectedNumbers();
+  if(nums.length===0) {alert("世代を選択してください"); return;}
+
+  if(limit===0){ document.getElementById("timer").textContent="∞"; }
+  else{
     timeLeft=limit;
     document.getElementById("timer").textContent=timeLeft;
     timer=setInterval(()=>{
       timeLeft--;
       document.getElementById("timer").textContent=timeLeft;
-      if(timeLeft<=0) gameOver(`時間切れ！\n正解は「${pokemon[currentNumber]}」`);
+      if(timeLeft<=0) gameOver(true);
     },1000);
   }
 
-  const available = getSelectedNumbers();
-  currentNumber = available[Math.floor(Math.random()*available.length)];
-  document.getElementById("number").textContent=currentNumber;
+  // 問題番号を選択
+  currentNumber=nums[Math.floor(Math.random()*nums.length)];
+  const mode=getMode();
+  if(mode==="numToName") document.getElementById("number").textContent=currentNumber;
+  else document.getElementById("number").textContent=pokemon[currentNumber];
 
   answer.value="";
   answer.focus();
 }
 
-// Enter判定
-answer.addEventListener("keydown",e=>{
-  if(e.key==="Enter") checkAnswer();
-});
+// ----- Enter判定 -----
+answer.addEventListener("keydown", e=>{ if(e.key==="Enter") checkAnswer(); });
 
-// 予測変換
-answer.addEventListener("input",()=>{
-  const text = normalizeJP(answer.value);
+// ----- 予測変換 -----
+answer.addEventListener("input", ()=>{
+  const text=normalizeJP(answer.value);
   pokemonList.innerHTML="";
   numbers.forEach(n=>{
-    if(normalizeJP(pokemon[n]).startsWith(text) || n.startsWith(text)){
+    if(pokemon[n] && normalizeJP(pokemon[n]).startsWith(text)){
       const o=document.createElement("option");
       o.value=pokemon[n];
       pokemonList.appendChild(o);
@@ -202,37 +258,41 @@ answer.addEventListener("input",()=>{
   });
 });
 
-// 判定
+// ----- 判定 -----
 function checkAnswer(){
-  const inputText = normalizeJP(answer.value.trim());
-  const correct = normalizeJP(pokemon[currentNumber]);
-  if(inputText===correct){
+  clearInterval(timer);
+  const input=normalizeJP(answer.value.trim());
+  const mode=getMode();
+  let correct;
+  if(mode==="numToName") correct=normalizeJP(pokemon[currentNumber]);
+  else correct=String(currentNumber);
+
+  if(input===correct){
     score++;
     document.getElementById("score").textContent=score;
     nextQuestion();
   }else{
-    gameOver(`不正解！\n正解は「${pokemon[currentNumber]}」`);
+    gameOver(false, `不正解！\n正解は「${mode==="numToName"?pokemon[currentNumber]:currentNumber}」`);
   }
 }
 
-// ギブアップ
+// ----- ギブアップ -----
 function giveUp(){
-  gameOver(`ギブアップ！\n正解は「${pokemon[currentNumber]}」`);
+  const mode=getMode();
+  gameOver(false, `ギブアップ！\n正解は「${mode==="numToName"?pokemon[currentNumber]:currentNumber}」`);
 }
 
-// ゲームオーバー
-function gameOver(reason){
+// ----- ゲームオーバー -----
+function gameOver(timeOut=false, reason="時間切れ！"){
   clearInterval(timer);
-  const selected = genCheckboxes.filter(cb=>cb.checked && cb.value!=="all");
-  if(selected.length===genCheckboxes.length-1){
-    const key = bestKey();
-    let top = JSON.parse(localStorage.getItem(key)||"[]");
-    top.push(score);
-    top.sort((a,b)=>b-a);
-    top = top.slice(0,3);
-    localStorage.setItem(key,JSON.stringify(top));
-  }
-  alert(`${reason}\nスコア：${score}`);
+  const key=bestKey();
+  let bests=JSON.parse(localStorage.getItem(key)||"[0,0,0]");
+  if(score>bests[0]){bests=[score,bests[0],bests[1]];}
+  else if(score>bests[1]){bests=[bests[0],score,bests[1]];}
+  else if(score>bests[2]){bests[2]=score;}
+  localStorage.setItem(key, JSON.stringify(bests));
+
+  alert(`${reason}\nスコア：${score}\n最高記録：${bests.join(" / ")}`);
   updateBest();
   document.getElementById("game").classList.add("hidden");
 }
